--- a/package.json
+++ b/package.json
@@ -13,24 +13,25 @@
     "@babel/runtime": "^7.3.4",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
-    "antd": "^3.14.1",
+    "@material-ui/styles": "^3.0.0-alpha.10",
     "antd-mobile": "^2.2.9",
     "axios": "^0.18.0",
     "intersection-observer": "^0.5.1",
-    "mobx": "^5.9.0",
+    "mobx": "4",
     "mobx-react": "^5.4.3",
     "mobx-react-lite": "^1.1.0",
     "moment": "^2.24.0",
     "qs": "^6.6.0",
     "react": "^16.8.4",
     "react-app-polyfill": "^0.2.2",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.8.4",
     "react-keeper": "^2.1.9",
     "react-loadable": "^5.5.0",
-    "react-router-dom": "^4.3.1",
     "resize-observer-polyfill": "^1.5.1",
     "rxjs": "^6.4.0",
     "rxjs-hooks": "^0.4.0",
+    "socket.io-client": "1",
     "styled-components": "^4.1.3",
     "wolfy87-eventemitter": "^5.2.6"
   },
@@ -56,6 +57,7 @@
     "@types/node": "^11.10.5",
     "@types/qs": "^6.5.2",
     "@types/react": "^16.8.7",
+    "@types/react-custom-scrollbars": "^4.0.5",
     "@types/react-dom": "^16.8.2",
     "@types/react-loadable": "^5.5.0",
     "@types/react-router-dom": "^4.3.1",
@@ -97,7 +99,7 @@
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.16.4",
-    "react-dev-utils": "^8.0.0",
+    "react-dev-utils": "7",
     "react-hot-loader": "^4.8.0",
     "sass-loader": "^7.1.0",
     "single-line-log": "^1.1.2",
